[metadata]
name = DeepPipeline
version = 0.0.1
author = PayShown
author_email = pxgong19@fudan.edu.cn
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gongpx20069/DeepPipeline
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3