[metadata]
name = PyParallelPipe
version = 0.0.1
author = PayShown
author_email = pxgong19@fudan.edu.cn
description = Using this ParallelPipe library, it is very fast and easy to build parallel acceleration for multi-stage tasks, including deep learning. This code library does not require any dependencies and consists of pure Python code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gongpx20069/ParallelPipe
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3
